--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content="homepage, blog" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="localhost/" />
+<link rel="canonical" href="blog.nss.net.ar/" />
 
 
     <title>
@@ -24,40 +24,40 @@
 
 
 
-  <link rel="stylesheet" href="localhost/main.min.07ea7ac7da67e2e153a7dfa2457bc6a19cca824288d175e223fadc579041bc51.css" integrity="sha256-B&#43;p6x9pn4uFTp9&#43;iRXvGoZzKgkKI0XXiI/rcV5BBvFE=" crossorigin="anonymous">
+  <link rel="stylesheet" href="blog.nss.net.ar/main.min.07ea7ac7da67e2e153a7dfa2457bc6a19cca824288d175e223fadc579041bc51.css" integrity="sha256-B&#43;p6x9pn4uFTp9&#43;iRXvGoZzKgkKI0XXiI/rcV5BBvFE=" crossorigin="anonymous">
 
 
 
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/localhost/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/localhost/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/localhost/favicon-16x16.png">
-    <link rel="manifest" href="/localhost/site.webmanifest">
-    <link rel="mask-icon" href="/localhost/safari-pinned-tab.svg" color="">
-    <link rel="shortcut icon" href="/localhost/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/blog.nss.net.ar/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/blog.nss.net.ar/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/blog.nss.net.ar/favicon-16x16.png">
+    <link rel="manifest" href="/blog.nss.net.ar/site.webmanifest">
+    <link rel="mask-icon" href="/blog.nss.net.ar/safari-pinned-tab.svg" color="">
+    <link rel="shortcut icon" href="/blog.nss.net.ar/favicon.ico">
     <meta name="msapplication-TileColor" content="">
 
 
 
   <meta itemprop="name" content="Bienvenido">
   <meta itemprop="description" content="Notas y pensamientos sobre I">
-  <meta itemprop="image" content="localhost/">
+  <meta itemprop="image" content="blog.nss.net.ar/">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="localhost/">
+  <meta name="twitter:image" content="blog.nss.net.ar/">
   <meta name="twitter:title" content="Bienvenido">
   <meta name="twitter:description" content="Notas y pensamientos sobre I">
 
 
 
-    <meta property="og:url" content="localhost/">
+    <meta property="og:url" content="blog.nss.net.ar/">
   <meta property="og:site_name" content="Bienvenido">
   <meta property="og:title" content="Bienvenido">
   <meta property="og:description" content="Notas y pensamientos sobre I">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="localhost/">
+    <meta property="og:image" content="blog.nss.net.ar/">
 
 
 
@@ -66,7 +66,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="localhost/index.xml" title="Bienvenido" />
+<link rel="alternate" type="application/rss+xml" href="blog.nss.net.ar/index.xml" title="Bienvenido" />
 
 
 
@@ -103,7 +103,7 @@
 
         <span class="header__right">
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/localhost/posts">Blog</a></li>
+    <ul class="menu__inner"><li><a href="/blog.nss.net.ar/posts">Blog</a></li>
         <ul class="submenu">
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">en</a>
@@ -153,7 +153,7 @@
 
 
 
-<script type="text/javascript" src="localhost/bundle.min.ad54ad97364f77ede35def9096b162bb1f0b3973aa50b080f5e82fa147f6882e2a7200d7535adbf9b51bebf939f1c1ca9bbe6be87530092aca720eac4a226fda.js" integrity="sha512-rVStlzZPd&#43;3jXe&#43;QlrFiux8LOXOqULCA9egvoUf2iC4qcgDXU1rb&#43;bUb6/k58cHKm75r6HUwCSrKcg6sSiJv2g=="></script>
+<script type="text/javascript" src="blog.nss.net.ar/bundle.min.ad54ad97364f77ede35def9096b162bb1f0b3973aa50b080f5e82fa147f6882e2a7200d7535adbf9b51bebf939f1c1ca9bbe6be87530092aca720eac4a226fda.js" integrity="sha512-rVStlzZPd&#43;3jXe&#43;QlrFiux8LOXOqULCA9egvoUf2iC4qcgDXU1rb&#43;bUb6/k58cHKm75r6HUwCSrKcg6sSiJv2g=="></script>
 
 
 
